==> nopnop2002/esp-idf-cc1101/components/cc1101/cc1101.c <==
#include <string.h>
#include "freertos/FreeRTOS.h"
#include "freertos/task.h"
#include <driver/spi_master.h>
#include <driver/gpio.h>
#include "esp_log.h"
#include "cc1101.h"
#define TAG "CC1101"
#define HOST_ID SPI2_HOST
#define HOST_ID SPI3_HOST
#define cc1101_Select()  gpio_set_level(CONFIG_CSN_GPIO, LOW)
#define cc1101_Deselect()  gpio_set_level(CONFIG_CSN_GPIO, HIGH)
#define wait_Miso()  while(gpio_get_level(CONFIG_MISO_GPIO)>0)
#define getGDO0state()	gpio_get_level(CONFIG_GDO0_GPIO)
#define wait_GDO0_high()	while(!getGDO0state())
#define wait_GDO0_low()  while(getGDO0state())
#define bitRead(value, bit) (((value) >> (bit)) & 0x01)
#define bitSet(value, bit) ((value) |= (1UL << (bit)))
#define bitClear(value, bit) ((value) &= ~(1UL << (bit)))
#define bitWrite(value, bit, bitvalue) ((bitvalue) ? bitSet(value, bit) : bitClear(value, bit))
#define delayMicroseconds(us) esp_rom_delay_us(us)
#define LOW  0
#define HIGH 1
#define byte uint8_t

void setCCregs(void) 
{
	writeReg(CC1101_IOCFG2, CC1101_DEFVAL_IOCFG2);
	writeReg(CC1101_IOCFG1, CC1101_DEFVAL_IOCFG1);
	writeReg(CC1101_IOCFG0, CC1101_DEFVAL_IOCFG0);
	writeReg(CC1101_FIFOTHR, CC1101_DEFVAL_FIFOTHR);
	writeReg(CC1101_PKTLEN, CC1101_DEFVAL_PKTLEN);
	writeReg(CC1101_PKTCTRL1, CC1101_DEFVAL_PKTCTRL1);
	writeReg(CC1101_PKTCTRL0, CC1101_DEFVAL_PKTCTRL0);

	// Set default synchronization word
	setSyncWordArray(_syncWord);

	// Set default device address
	setDevAddress(_devAddress);

	// Set default frequency channel
	setChannel(_channel);
	
	writeReg(CC1101_FSCTRL1, CC1101_DEFVAL_FSCTRL1);
	writeReg(CC1101_FSCTRL0, CC1101_DEFVAL_FSCTRL0);

	// Set default carrier frequency = 868 MHz
	setCarrierFreq(_carrierFreq);

	// RF speed
	switch(_workMode)
	{
		case CSPEED_4800:
			writeReg(CC1101_MDMCFG4, CC1101_DEFVAL_MDMCFG4_4800);
			break;
		case CSPEED_9600:
			writeReg(CC1101_MDMCFG4, CC1101_DEFVAL_MDMCFG4_9600);
			break;
		case CSPEED_19200:
			writeReg(CC1101_MDMCFG4, CC1101_DEFVAL_MDMCFG4_19200);
			break;
		case CSPEED_38400:
			writeReg(CC1101_MDMCFG4, CC1101_DEFVAL_MDMCFG4_38400);
			break;
	}

		
	writeReg(CC1101_MDMCFG3, CC1101_DEFVAL_MDMCFG3);
	writeReg(CC1101_MDMCFG2, CC1101_DEFVAL_MDMCFG2);
	writeReg(CC1101_MDMCFG1, CC1101_DEFVAL_MDMCFG1);
	writeReg(CC1101_MDMCFG0, CC1101_DEFVAL_MDMCFG0);
	writeReg(CC1101_DEVIATN, CC1101_DEFVAL_DEVIATN);
	writeReg(CC1101_MCSM2, CC1101_DEFVAL_MCSM2);
	writeReg(CC1101_MCSM1, CC1101_DEFVAL_MCSM1);
	writeReg(CC1101_MCSM0, CC1101_DEFVAL_MCSM0);
	writeReg(CC1101_FOCCFG, CC1101_DEFVAL_FOCCFG);
	writeReg(CC1101_BSCFG, CC1101_DEFVAL_BSCFG);
	writeReg(CC1101_AGCCTRL2, CC1101_DEFVAL_AGCCTRL2);
	writeReg(CC1101_AGCCTRL1, CC1101_DEFVAL_AGCCTRL1);
	writeReg(CC1101_AGCCTRL0, CC1101_DEFVAL_AGCCTRL0);
	writeReg(CC1101_WOREVT1, CC1101_DEFVAL_WOREVT1);
	writeReg(CC1101_WOREVT0, CC1101_DEFVAL_WOREVT0);
	writeReg(CC1101_WORCTRL, CC1101_DEFVAL_WORCTRL);
	writeReg(CC1101_FREND1, CC1101_DEFVAL_FREND1);
	writeReg(CC1101_FREND0, CC1101_DEFVAL_FREND0);
	writeReg(CC1101_FSCAL3, CC1101_DEFVAL_FSCAL3);
	writeReg(CC1101_FSCAL2, CC1101_DEFVAL_FSCAL2);
	writeReg(CC1101_FSCAL1, CC1101_DEFVAL_FSCAL1);
	writeReg(CC1101_FSCAL0, CC1101_DEFVAL_FSCAL0);
	writeReg(CC1101_RCCTRL1, CC1101_DEFVAL_RCCTRL1);
	writeReg(CC1101_RCCTRL0, CC1101_DEFVAL_RCCTRL0);
	writeReg(CC1101_FSTEST, CC1101_DEFVAL_FSTEST);
	writeReg(CC1101_PTEST, CC1101_DEFVAL_PTEST);
	writeReg(CC1101_AGCTEST, CC1101_DEFVAL_AGCTEST);
	writeReg(CC1101_TEST2, CC1101_DEFVAL_TEST2);
	writeReg(CC1101_TEST1, CC1101_DEFVAL_TEST1);
	writeReg(CC1101_TEST0, CC1101_DEFVAL_TEST0);
	
	// Send empty packet
	CCPACKET packet;
	packet.length = 0;
	sendData(packet);
}

esp_err_t init(uint8_t freq, uint8_t mode)
{
	_carrierFreq = freq; // Frequency
	_workMode = mode; // Transfer Speed
	//_carrierFreq = CFREQ_868;
	_channel = CC1101_DEFVAL_CHANNR; // 0x00
	_syncWord[0] = CC1101_DEFVAL_SYNC1; // 0xB5
	_syncWord[1] = CC1101_DEFVAL_SYNC0; // 0x47
	_devAddress = CC1101_DEFVAL_ADDR; // 0xFF
	_packetAvailable = false;

	if (freq == CFREQ_315) {
		_powerMin = PA_MinPower_315;
		_power0db = PA_0dbPower_315;
		_powerMax = PA_MaxPower_315;
	} else if (freq == CFREQ_433) {
		_powerMin = PA_MinPower_433;
		_power0db = PA_0dbPower_433;
		_powerMax = PA_MaxPower_433;
	} else if (freq == CFREQ_868) {
		_powerMin = PA_MinPower_868;
		_power0db = PA_0dbPower_868;
		_powerMax = PA_MaxPower_868;
	} else if (freq == CFREQ_915) {
		_powerMin = PA_MinPower_915;
		_power0db = PA_0dbPower_915;
		_powerMax = PA_MaxPower_915;
	} else {
		ESP_LOGE(TAG, "Illegal Freqiency");
		vTaskDelete(NULL);
	}

	// Initialize SPI
	spi_init();

	//interrupt setting
	gpio_config_t io_conf;
	//interrupt of falling edge
	io_conf.intr_type = GPIO_INTR_NEGEDGE; // GPIO interrupt type : falling edge
	//bit mask of the pins
	io_conf.pin_bit_mask = 1ULL<<CONFIG_GDO0_GPIO;
	//set as input mode
	io_conf.mode = GPIO_MODE_INPUT;
	//enable pull-up mode
	io_conf.pull_up_en = 1;
	io_conf.pull_down_en = 0;
	gpio_config(&io_conf);
	//install gpio isr service
	gpio_install_isr_service(0);
	//hook isr handler for specific gpio pin
	gpio_isr_handler_add(CONFIG_GDO0_GPIO, gpio_isr_handler, (void*) CONFIG_GDO0_GPIO);

	// Reset CC1101
	reset();

	// Read PATABLE
	uint8_t ptable[8];
	readBurstReg(ptable, CC1101_PATABLE, 8);
	ESP_LOG_BUFFER_HEXDUMP(TAG, ptable, 8, ESP_LOG_INFO);
#if 0
	setTxPowerAmp(PA_LowPower);
#endif

	// Check Chip ID
	uint8_t CHIP_PARTNUM = readReg(CC1101_PARTNUM, CC1101_STATUS_REGISTER);
	uint8_t CHIP_VERSION = readReg(CC1101_VERSION, CC1101_STATUS_REGISTER);
	ESP_LOGI(TAG, "CC1101_PARTNUM %d", CHIP_PARTNUM);
	ESP_LOGI(TAG, "CC1101_VERSION %d", CHIP_VERSION);
	if (CHIP_PARTNUM != 0 || CHIP_VERSION != 20) {
		ESP_LOGE(TAG, "CC1101 not installed");
		return ESP_FAIL;
	}
	return ESP_OK;
}

bool sendData(CCPACKET packet)
{
	byte marcState;
	bool res = false;
 
	// Declare to be in Tx state. This will avoid receiving packets whilst
	// transmitting
	_rfState = RFSTATE_TX;

	// Enter RX state
	setRxState();

	int tries = 0;
	// Check that the RX state has been entered
	while (tries++ < 1000 && ((marcState = readStatusReg(CC1101_MARCSTATE)) & 0x1F) != 0x0D)
	{
		if (marcState == 0x11)				// RX_OVERFLOW
			flushRxFifo();							// flush receive queue
	}
	if (tries >= 1000) {
		// TODO: MarcState sometimes never enters the expected state; this is a hack workaround.
		return false;
	}

	delayMicroseconds(500);

	if (packet.length > 0)
	{
		// Set data length at the first position of the TX FIFO
		writeReg(CC1101_TXFIFO,  packet.length);
		// Write data into the TX FIFO
		writeBurstReg(CC1101_TXFIFO, packet.data, packet.length);

		// CCA enabled: will enter TX state only if the channel is clear
		setTxState();
	}

	// Check that TX state is being entered (state = RXTX_SETTLING)
	marcState = readStatusReg(CC1101_MARCSTATE) & 0x1F;
	if((marcState != 0x13) && (marcState != 0x14) && (marcState != 0x15))
	{
		setIdleState();				// Enter IDLE state
		flushTxFifo();				// Flush Tx FIFO
		setRxState();					// Back to RX state

		// Declare to be in Rx state
		_rfState = RFSTATE_RX;
		return false;
	}

	// Wait for the sync word to be transmitted
	ESP_LOGD(TAG, "b wait_GDO0_high");
	wait_GDO0_high();

	// Wait until the end of the packet transmission
	ESP_LOGD(TAG, "b wait_GDO0_low");
	wait_GDO0_low();

	// Check that the TX FIFO is empty
	ESP_LOGD(TAG, "b readStatusReg");
	if((readStatusReg(CC1101_TXBYTES) & 0x7F) == 0)
		res = true;

	setIdleState();				// Enter IDLE state
	flushTxFifo();				// Flush Tx FIFO

	// Enter back into RX state
	setRxState();

	// Declare to be in Rx state
	_rfState = RFSTATE_RX;

	return res;
}
