==> R-Fig-Con/ESP32-Wi-Fi-Firmware/wifi_firmware_esp32/src/cc1101/cc1101.cpp <==
#include "cc1101.h"
#include "Arduino.h" //various
#define cc1101_Select() digitalWrite(SS, LOW)
#define cc1101_Deselect() digitalWrite(SS, HIGH)
#define wait_Miso() while (digitalRead(MISO) > 0)
#define getGDO0state() digitalRead(CC1101_GDO0)
#define getGDO2state() digitalRead(CC1101_GDO2)
#define wait_GDO0_high() while (!getGDO0state())

void CC1101::setCCregs(void)
{
    writeReg(CC1101_IOCFG2, CC1101_DEFVAL_IOCFG2);
    writeReg(CC1101_IOCFG1, CC1101_DEFVAL_IOCFG1);
    writeReg(CC1101_IOCFG0, CC1101_DEFVAL_IOCFG0);
    writeReg(CC1101_FIFOTHR, CC1101_DEFVAL_FIFOTHR);
    writeReg(CC1101_PKTLEN, CC1101_DEFVAL_PKTLEN);
    writeReg(CC1101_PKTCTRL1, CC1101_DEFVAL_PKTCTRL1);
    writeReg(CC1101_PKTCTRL0, CC1101_DEFVAL_PKTCTRL0);

    // Set default synchronization word
    setSyncWord(syncWord);

    // Set default device address
    setDevAddress(devAddress);

    // Set default frequency channel
    setChannel(channel);

    writeReg(CC1101_FSCTRL1, CC1101_DEFVAL_FSCTRL1);
    writeReg(CC1101_FSCTRL0, CC1101_DEFVAL_FSCTRL0);

    // Set default carrier frequency = 868 MHz
    setCarrierFreq(carrierFreq);

    // RF speed
    if (workMode == MODE_LOW_SPEED)
        writeReg(CC1101_MDMCFG4, CC1101_DEFVAL_MDMCFG4_4800);
    else
        writeReg(CC1101_MDMCFG4, CC1101_DEFVAL_MDMCFG4_38400);

    writeReg(CC1101_MDMCFG3, CC1101_DEFVAL_MDMCFG3);
    writeReg(CC1101_MDMCFG2, CC1101_DEFVAL_MDMCFG2);
    writeReg(CC1101_MDMCFG1, CC1101_DEFVAL_MDMCFG1);
    writeReg(CC1101_MDMCFG0, CC1101_DEFVAL_MDMCFG0);
    writeReg(CC1101_DEVIATN, CC1101_DEFVAL_DEVIATN);
    writeReg(CC1101_MCSM2, CC1101_DEFVAL_MCSM2);
    writeReg(CC1101_MCSM1, CC1101_DEFVAL_MCSM1);
    writeReg(CC1101_MCSM0, CC1101_DEFVAL_MCSM0);
    writeReg(CC1101_FOCCFG, CC1101_DEFVAL_FOCCFG);
    writeReg(CC1101_BSCFG, CC1101_DEFVAL_BSCFG);

    writeReg(CC1101_AGCCTRL2, CC1101_DEFVAL_AGCCTRL2);
    writeReg(CC1101_AGCCTRL1, CC1101_DEFVAL_AGCCTRL1);
    writeReg(CC1101_AGCCTRL0, CC1101_DEFVAL_AGCCTRL0);

    writeReg(CC1101_WOREVT1, CC1101_DEFVAL_WOREVT1);
    writeReg(CC1101_WOREVT0, CC1101_DEFVAL_WOREVT0);
    writeReg(CC1101_WORCTRL, CC1101_DEFVAL_WORCTRL);
    writeReg(CC1101_FREND1, CC1101_DEFVAL_FREND1);
    writeReg(CC1101_FREND0, CC1101_DEFVAL_FREND0);
    writeReg(CC1101_FSCAL3, CC1101_DEFVAL_FSCAL3);
    writeReg(CC1101_FSCAL2, CC1101_DEFVAL_FSCAL2);
    writeReg(CC1101_FSCAL1, CC1101_DEFVAL_FSCAL1);
    writeReg(CC1101_FSCAL0, CC1101_DEFVAL_FSCAL0);
    writeReg(CC1101_RCCTRL1, CC1101_DEFVAL_RCCTRL1);
    writeReg(CC1101_RCCTRL0, CC1101_DEFVAL_RCCTRL0);
    writeReg(CC1101_FSTEST, CC1101_DEFVAL_FSTEST);
    writeReg(CC1101_PTEST, CC1101_DEFVAL_PTEST);
    writeReg(CC1101_AGCTEST, CC1101_DEFVAL_AGCTEST);
    writeReg(CC1101_TEST2, CC1101_DEFVAL_TEST2);
    writeReg(CC1101_TEST1, CC1101_DEFVAL_TEST1);
    writeReg(CC1101_TEST0, CC1101_DEFVAL_TEST0);
}

void CC1101::init(uint8_t freq, uint8_t mode)
{
    carrierFreq = freq;
    workMode = mode;
#ifdef ESP32
    pinMode(SS, OUTPUT); // Make sure that the SS Pin is declared as an Output
#endif
    SPI.begin(); // Initialize SPI interface

    // Set the speed of the SPI interface. Ideally, this should be as
    // high as possible to avoid time overheads. According to the
    // CC1101 datasheet, up to 10 MHz should be achievable, but empirical
    // testing suggests that is not possible on the current setup. Perhaps
    // shorter cables would allow for higher speeds.
    SPI.beginTransaction(SPISettings(1500000, MSBFIRST, SPI_MODE0));
    pinMode(CC1101_GDO0, INPUT); // Config GDO0 as input
    pinMode(CC1101_GDO2, INPUT); // Config GDO2 as input

    reset(); // Reset CC1101

    // Configure PATABLE
    setTxPowerAmp(PA_LowPower);
}

bool CC1101::sendData(CCPACKET packet)
{
    unsigned short remainingBytes = packet.length;

    // The radio can only (automatically) handle chunks of up to 64 bytes.
    // Compute the length of the last chunk and load it on the PKTLEN register.
    // Note: the +2 below is to account for the size of the packet length header
    // field.
    writeReg(CC1101_PKTLEN, (packet.length + 2) % 256);

    // Push the packet length to the TX FIFO buffer
    writeBurstReg(CC1101_TXFIFO, (byte *)&(packet.length), sizeof(packet.length));

    // For small packets (< 255 bytes), we need to change the transmission mode
    // to fixed length right here, otherwise it will not be changed in the main
    // transmission loop.
    if (packet.length < 255)
        setPacketLengthConfig(CC1101_LENGTH_CONFIG_FIXED);

    // Enable monitoring the TX FIFO through GDO2
    setMonitorTxFifo();

    // Put the radio into the TX state
    setTxState();

    // Wait until the transmission starts
    wait_GDO0_high_abort();

    // As space becomes available in the FIFO, push more
    // of the packet payload.
    while (remainingBytes > 0)
    {

        // Wait until there is data available on the FIFO
        while (getGDO2state())
        {
            if (!getGDO0state() && getGDO2state())
            {

                Serial.println("Premature end to the transmission!");

                // Clean-up
                setIdleState(); // Enter IDLE state
                flushTxFifo();  // Flush Tx FIFO

                // Put the radio back in infinite packet mode
                setPacketLengthConfig(CC1101_LENGTH_CONFIG_INFINITE);

#ifdef CCA_FROM_GDO2_PIN
                setMonitorCCA();
#endif

                // Enter back into RX state
                setRxState();

                return false;
            }
        }

        if (remainingBytes == 8)
        {

            // If less than 256 bytes remain, put the radio into
            // fixed length mode.
            setPacketLengthConfig(CC1101_LENGTH_CONFIG_FIXED);
        }

        // Push the next byte into the FIFO
        writeReg(CC1101_TXFIFO, packet.data[packet.length - remainingBytes]);
        remainingBytes--;
    }

    // Wait until the end of the packet transmission
    wait_GDO0_low();

    setIdleState(); // Enter IDLE state
    flushTxFifo();  // Flush Tx FIFO

    // Put the radio back in infinite packet mode
    setPacketLengthConfig(CC1101_LENGTH_CONFIG_INFINITE);

#ifdef CCA_FROM_GDO2_PIN
    setMonitorCCA();
#endif

    // Enter back into RX state
    setRxState();

    return true;
}
